--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@ title: Accueil
 </div>
 <div class="row-fluid">
   <div class="span4">
-    <h2>Elasticsearch</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn" href="#">View details &raquo;</a></p>
+    <h2>Communaute</h2>
+    <p>Rejoignez la communaute francaise et participez avec nous a la creation de cet espace.
+	</p>
+    <p><a class="btn" href="/joinus.html">Participez &raquo;</a></p>
   </div><!--/span-->
   <div class="span4">
     <h2>Trucs et astuces</h2>
@@ -23,7 +24,10 @@ title: Accueil
   </div><!--/span-->
   <div class="span4">
     <h2>Contacts</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn" href="#">View details &raquo;</a></p>
+    <p>Suivez-nous sur Twitter et inscrivez-vous a la liste de diffusion</p>
+    <p>
+    <a class="btn" href="/twitter.html">Twitter &raquo;</a>
+    <a class="btn" href="/ml.html">Liste diffusion &raquo;</a>
+    </p>
   </div><!--/span-->
 </div><!--/row-->
