--- a/twitter.html
+++ b/twitter.html
@@ -3,7 +3,40 @@ layout: default
 title: Twitter
 ---
 
-<a href="https://twitter.com/ElasticsearchFR" class="twitter-follow-button" data-show-count="false" data-lang="fr" data-size="large">Suivre @ElasticsearchFR</a>
+<style type="text/css">
+#twitter_update_list {
+	font-size: 13px;
+	line-height: 21px;
+	list-style: none;
+	}
+#twitter_update_list li {
+	background: url('images/twitter-divider.gif') bottom left repeat-x;
+	padding-bottom: 7px;
+	margin-bottom: 9px;
+	}
+#twitter_update_list span, #twitter_update_list span a {
+	color: #ababab;
+	text-decoration: none;
+	}
+#twitter_update_list a {
+	color: #6f7276;
+	}
+</style>
+
+
+<div class="row">
+	<div class="well span12">
+		<a href="https://twitter.com/ElasticsearchFR" class="twitter-follow-button" data-show-count="false" data-lang="fr" data-size="large">Suivre @ElasticsearchFR</a>
+		<ul id="twitter_update_list"><li>Twitter feed loading</li></ul>
+	</div>
+</div>
+
+
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<script type="text/javascript" src="http://twitter.com/javascripts/blogger.js">
+</script>
+<script type="text/javascript" src="http://twitter.com/statuses/user_timeline/elasticsearchfr.json?callback=twitterCallback2&count=10&include_rts=true">
+</script>
 
 
+<!-- https://api.twitter.com/1/statuses/user_timeline.json?include_entities=true&include_rts=true&screen_name=twitterapi&count=2  -->
