Un essai avec des accents

--- a/joinus.html
+++ b/joinus.html
@@ -5,12 +5,12 @@ title: Participez
 
 Si vous souhaitez contribuer sur ce site, rien de plus simple :
 
-<h2>Resume</h2>
+<h2>Résumé</h2>
 <ul>
 	<li>Forkez le code sur <a href="https://github.com/elasticsearchfr/elasticsearchfr.github.com">github</a>
-	<li>Ajoutez vos articles dans le repertoire blog/_posts
+	<li>Ajoutez vos articles dans le répertoire blog/_posts
 	<li>Demandez un pull request
-	<li>Apres relecture, votre contenu sera publie
+	<li>Après relecture, votre contenu sera publié
 </ul> 
 
-<h2>Instructions detaillees</h2>
+<h2>Instructions détaillées</h2>
