Un essai avec des accents

--- a/joinus.html
+++ b/joinus.html
@@ -5,12 +5,12 @@ title: Participez
 
 Si vous souhaitez contribuer sur ce site, rien de plus simple :
 
-<h2>Résumé</h2>
+<h2>RÃ©sumÃ©</h2>
 <ul>
 	<li>Forkez le code sur <a href="https://github.com/elasticsearchfr/elasticsearchfr.github.com">github</a>
-	<li>Ajoutez vos articles dans le répertoire blog/_posts
+	<li>Ajoutez vos articles dans le rÃ©pertoire blog/_posts
 	<li>Demandez un pull request
-	<li>Après relecture, votre contenu sera publié
+	<li>AprÃ¨s relecture, votre contenu sera publiÃ©
 </ul> 
 
-<h2>Instructions détaillées</h2>
+<h2>Instructions dÃ©taillÃ©es</h2>
