--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@ title: Accueil
 <div class="hero-unit">
   <h1><img src="img/logo_fr_small.png"> Elasticsearch France</h1>
   <p></p>
-  <p>Bienvenue sur le site Elasticsearch France dedie au projet Elasticsearch.</p>
+  <p>Bienvenue sur le site Elasticsearch France dédié au projet Elasticsearch.</p>
   <p>L'objectif de ce site est de fournir un lien entre les utilisateurs francophones, de 
-  partager des informations et de la documentation en francais sur le projet Elasticsearch.</p>
+  partager des informations et de la documentation en français sur le projet Elasticsearch.</p>
   <p><a class="btn btn-primary btn-large">En savoir plus &raquo;</a></p>
 </div>
 <div class="row-fluid">
   <div class="span4">
-    <h2>Communaute</h2>
-    <p>Rejoignez la communaute francaise et participez avec nous a la creation de cet espace.
+    <h2>Communauté</h2>
+    <p>Rejoignez la communauté française et participez avec nous à la création de cet espace.
 	</p>
     <p><a class="btn" href="/joinus.html">Participez &raquo;</a></p>
   </div><!--/span-->
   <div class="span4">
     <h2>Trucs et astuces</h2>
-    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn" href="#">View details &raquo;</a></p>
+    <p>Le blog va s'enrichir petit à petit d'astuces ou de conseils glanés ici ou là. Votre aide est la bienvenue...</p>
+    <p><a class="btn" href="#">Blog &raquo;</a></p>
   </div><!--/span-->
   <div class="span4">
     <h2>Contacts</h2>
-    <p>Suivez-nous sur Twitter et inscrivez-vous a la liste de diffusion</p>
+    <p>Suivez-nous sur Twitter et inscrivez-vous à la liste de diffusion</p>
     <p>
     <a class="btn" href="/twitter.html">Twitter &raquo;</a>
     <a class="btn" href="/ml.html">Liste diffusion &raquo;</a>
