Colorisation des boutons

--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@ title: Accueil
     <h2>Communauté</h2>
     <p>Rejoignez la communauté française et participez avec nous à la création de cet espace.
 	</p>
-    <p><a class="btn" href="/joinus.html">Participez &raquo;</a></p>
+	<p>Retoruvez également les évènements en français autour d'Elasticsearch. Et ajoutez les votres !</p>
+    <p><a class="btn btn-success" href="/joinus.html">Participez &raquo;</a>
+    <a class="btn btn-success" href="/agenda.html">Agenda &raquo;</a></p>
   </div><!--/span-->
   <div class="span4">
     <h2>Trucs et astuces</h2>
     <p>Le blog va s'enrichir petit à petit d'astuces ou de conseils glanés ici ou là. Votre aide est la bienvenue...</p>
-    <p><a class="btn" href="#">Blog &raquo;</a></p>
+    <p><a class="btn btn-inverse" href="#">Blog &raquo;</a></p>
   </div><!--/span-->
   <div class="span4">
     <h2>Contacts</h2>
     <p>Suivez-nous sur Twitter et inscrivez-vous à la liste de diffusion</p>
     <p>
-    <a class="btn" href="/twitter.html">Twitter &raquo;</a>
-    <a class="btn" href="/ml.html">Liste diffusion &raquo;</a>
+    <a class="btn btn-info" href="/twitter.html">Twitter &raquo;</a>
+    <a class="btn btn-info" href="/ml.html">Liste diffusion &raquo;</a>
     </p>
   </div><!--/span-->
 </div><!--/row-->
