Add link to blog

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Accueil
   <div class="span4">
     <h2>Trucs et astuces</h2>
     <p>Le blog va s'enrichir petit à petit d'astuces ou de conseils glanés ici ou là. Votre aide est la bienvenue...</p>
-    <p><a class="btn btn-inverse" href="#">Blog &raquo;</a></p>
+    <p><a class="btn btn-inverse" href="/blog.html">Blog &raquo;</a></p>
   </div><!--/span-->
   <div class="span4">
     <h2>Contacts</h2>
